# whizzard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  agent_permission_manager_mvp_build_plan.md  agent_permission_manager_mvp_build_plan_v2.md  agent_permission_manager_mvp_build_plan_v3.md  architecture.md  mvp_build_plan.md  post_mvp_spec.md  pyproject.toml  rampart_clarity_vs_whizzard.html  vision_and_strategy.md  warlock_airlock_branding_product_roadmap.md  warlock_airlock_mvp_build_plan_v4.md  warlock_airlock_mvp_build_plan_v5.md  warlock_airlock_post_mvp_v1_spec.md  warlock_airlock_post_mvp_v2_spec.md
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  dependency-review.yml  install-smoke.yml  release.yml
config/: harnesses.json.example  mounts.json.example  profiles.json.example
docker/: Dockerfile  Dockerfile.hermes
docs/: HANDOFF.md  README.md  STAGE_8_BUILD_PLAN.md  architecture.md  control_surface.md  decisions.md  engineering_log.md  hermes_research.md  home_lab_deployment.md  known_issues.md  mvp_build_plan.md  nanoclaw_internals.md  positioning_rampart_clarity.html  post_mvp_spec.md  review_process.md  session_handoff.md  similar_tools_research.html  similar_tools_research.md  stage_validation.md  threat_model.md  vision_and_strategy.md
docs/archive/: nanoclaw_research.md
docs/examples/: README.md
docs/examples/claude_code/: README.md
docs/examples/claude_code/oiq-launch/: SKILL.md
docs/examples/claude_code/oiq-presets/: SKILL.md
docs/examples/claude_code/oiq-sessions-tail/: SKILL.md
docs/examples/claude_code/oiq-status/: SKILL.md
docs/examples/claude_code/whiz-launch/: SKILL.md
docs/examples/claude_code/whiz-sessions-tail/: SKILL.md
docs/examples/hermes/: README.md  config.yaml.snippet  harnesses.json.example
docs/internal/: engineering_log.md  home_lab_deployment.md
docs/internal/archive/: STAGE_8_BUILD_PLAN.md  nanoclaw_research.md  nanoclaw_v2_impact.md
docs/internal/examples/: README.md
docs/internal/examples/claude_code/whiz-presets/: SKILL.md
docs/internal/examples/claude_code/whiz-status/: SKILL.md
docs/internal/examples/hermes/: config.yaml.snippet
docs/reference/: architecture-at-a-glance.html  whizzard-architecture.html
scripts/: dx.py  release_verify.sh  validate_decisions.py
tests/: conftest.py  test_adapters.py  test_adjust.py  test_atomic.py  test_broker.py  test_broker_proxy.py  test_cli_brevity_and_status.py  test_cli_dry_run.py  test_config.py  test_credential_log_scrubbing.py  test_credentials_utility.py  test_docker_cmd.py  test_dry_run_parity.py  test_enforcement.py  test_harness_config.py  test_hermes_adapter.py  test_hermes_image_cli.py  test_image_cli.py  test_init_wizard.py  test_mcp_server.py  test_mounts.py  test_mounts_add_cli.py  test_onecli_gateway.py  test_packaging.py  test_platform.py  test_preset_cli.py  test_preset_config.py  test_requests.py  test_requests_cli.py  test_safety.py  test_session_log.py  test_snapshot.py  test_wake.py  test_wake_cli.py
tests/integration/: conftest.py  test_adjust_smoke.py  test_adversarial.py  test_enforcement_smoke.py  test_hermes_smoke.py  test_image_smoke.py  test_init_wizard_smoke.py  test_mcp_cell_smoke.py  test_mcp_stdio_smoke.py  test_redteam_adjust.py  test_redteam_config_writeprotect.py  test_redteam_containment.py  test_redteam_cooperation.py  test_redteam_disruption.py  test_redteam_network.py  test_run_shell_smoke.py  test_wake_smoke.py
warlock/: cli.py  config.py  docker_cmd.py  mounts.py
whizzard/: _atomic.py  _platform.py  adjust.py  broker.py  cli.py  config.py  docker_cmd.py  enforcement.py  harness_config.py  images.py  init_wizard.py  mcp_server.py  mounts.py  onecli_gateway.py  preset_config.py  requests.py  safety.py  session_log.py  snapshot.py  wake.py
whizzard/_dockerfiles/: Dockerfile  Dockerfile.broker  Dockerfile.hermes  Dockerfile.onecli-shim  __init__.py
whizzard/_dockerfiles/broker/: proxy.py
whizzard/adapters/: __init__.py  _credentials.py  base.py  generic.py  hermes.py
whizzard/cli/: __init__.py  _launch.py  _session.py  _shared.py  adjust.py  harnesses.py  hermes.py  image.py  init.py  mounts.py  preset.py  profiles.py  requests.py  sessions.py  wake.py
