[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whizzard"
version = "0.1.0"
description = "Whizzard — local capability governance layer for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BuckG71" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
whizzard = "whizzard.cli:app"

[tool.setuptools.packages.find]
include = ["whizzard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
