[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whizzard"
version = "0.1.0"
description = "Whizzard — local capability governance layer for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bryan Garrett" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
whizzard = "whizzard.cli:app"

[tool.setuptools.packages.find]
include = ["whizzard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Belt-and-suspenders against the bundled-test-file attack class
# (see DECISIONS.md D-152 / VentureBeat 2026-05-09 on Anthropic Skill scanners).
# `testpaths` already restricts discovery to `tests/`, but explicit
# `norecursedirs` ensures that even if testpaths is broadened later,
# pytest will not auto-discover test files inside skill / agent / IDE
# state directories.
norecursedirs = [".agents", ".claude", ".cursor"]
